# LLM_judge

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
configs/: helpfulness.yaml  safety.yaml
examples/: test_data.csv
judge_tool/cli/: main.py
judge_tool/core/: batch.py  judge.py  prompts.py
judge_tool/models/: schemas.py
judge_tool/web/: app.py
judge_tool/web/static/: index.html
tests/: test_judge.py
