[tool.poetry]
name = "judge-tool"
version = "0.1.0"
description = "A CLI tool for evaluating LLM outputs using another LLM as a judge."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.40.0"
pydantic = "^2.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.0.0"
pyyaml = "^6.0.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
judge-tool = "judge_tool.cli.main:app"
